# MagicController

./: .dockerignore  .env  .gitignore  .pre-commit-config.yaml  DatabaseAdapter.py  Dockerfile  MagicController.py  MagicMirrorDB.db  Pipfile  README.md  autostart.sh  decode.py  entrypoint.sh  images.txt  install.sh  pyproject.toml  requirements.txt  requirements_desktop.txt  requirements_raspberry.txt  start.sh  util.py
.github/workflows/: code-quality.yml
Communication/: CommunicationHandler.py  MagicMirrorDB.db  Webserver.py  __init__.py  bletools.py  reference.py  testConnection.py
Configuration/: ConfigurationHandler.py  FileHelper.py  __init__.py  load_default_config.py  standard_config.js  standard_config.json  template_config.json
FaceRecognition/: BenchmarkFaceDetection.py  Benchmarking.py  CelebritiesTest.py  FaceAuthentication.py  LandmarkDetection.py  MirrorFaceOutput.py  MobileFaceNet.py  MobileFaceNetLite.py  MobileFaceNetStandard.py  OptimizedRecognition.py  PackageTest.py  WebcamTest.py  __init__.py  algorithm.txt  haar_vs_hog.py  user_embedding.p
communication/: CommunicationHandler.py
configuration/: ConfigurationHandler.py  FileHelper.py  Modules.json  __init__.py  template_config.js  template_config.json
face_recognition/: FaceAuthentication.py  MirrorFaceOutput.py  MobileFaceNet.py  MobileFaceNetLite.py  MobileFaceNetStandard.py  checkFPS.py  haar_vs_hog.py  user_embedding.p
pseudocode/: match.txt  register.txt
setup/: Dockerfile  Dockerfile_OpenCV  autostart.sh  entrypoint.sh  install.sh  magicmirror.service  open_bash.sh
(+37 files in other folders)
